--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,7 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+
+
+# Ignore DS_Store files
+*.DS_STORE
